# barevisor

src/hvcore/: Cargo.toml
src/hvcore/src/hypervisor/: mod.rs  paging_structures.rs  serial_logger.rs
src/hvcore/src/hypervisor/amd/: guest.rs  npts.rs
src/hvcore/src/hypervisor/intel/: epts.rs
src/uefi/: Cargo.toml  README.md
src/uefi/check_hv_vendor/src/: main.rs
src/windows/: Cargo.toml
src/windows/win_hv/: Cargo.toml
src/windows/win_hv/src/: ops.rs
